--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>BlazorClient</title>
   <base href="./" />
-  <script type="module" src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
+  <!--script type="module" src="https://unpkg.com/dexie@latest/dist/dexie.mjs"></script-->
+  <script type="module" src="js/dexie.js"></script>
   <script type="module" src="js/dexie_test.js"></script>
 </head>
 
